<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".feature.download_card.DownloadCardActivity">    <androidx.core.widget.NestedScrollView        android:layout_width="match_parent"        android:layout_height="match_parent"        android:fillViewport="true">        <androidx.constraintlayout.widget.ConstraintLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            tools:context=".feature.download_card.DownloadCardActivity">            <Button                android:id="@+id/btnUnlockBack"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="BACK"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toTopOf="parent" />            <LinearLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:orientation="vertical"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/btnUnlockBack">                <TextView                    android:id="@+id/tvUnlockTitle"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_gravity="center"                    android:text="@string/tv_unlock_title" />                <EditText                    android:id="@+id/edtUnlockpw"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_gravity="center"                    android:hint="@string/edt_unlock_pw"                    android:maxLines="1" />                <Button                    android:id="@+id/btnUnlockGoHelper"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_gravity="center"                    android:text="@string/btn_unlock_resetpw"                    app:layout_constraintStart_toStartOf="@id/edtUnlockpw"                    app:layout_constraintTop_toBottomOf="@id/edtUnlockpw" />            </LinearLayout>        </androidx.constraintlayout.widget.ConstraintLayout>    </androidx.core.widget.NestedScrollView></androidx.constraintlayout.widget.ConstraintLayout>