<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.cg_password.ChangePasswordActivity">

    <TextView
        android:id="@+id/btnChangepwBack"
        android:layout_width="16dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/btn_carddetail_keyboard_arrow_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvChangepwTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/greyish_brown"
        android:lineSpacingExtra="7sp"
        tools:text="@string/btn_changepw"
        app:layout_constraintTop_toBottomOf="@id/btnChangepwBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/notosans-regular"/>

    <EditText
        android:id="@+id/edtExistPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnChangepwBack"
        app:layout_constraintStart_toEndOf="@id/btnChangepwBack"
        android:background="@android:color/transparent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="199dp"
        android:textSize="16sp"
        android:lineSpacingExtra="6sp"
        android:textColorHint="@color/pinkish_grey"
        android:hint="@string/edt_changepw_exist_pw"
        android:maxLines="1"
        android:ems="10"
        android:inputType="textPassword"
        />

    <View
        android:id="@+id/vUnderbarExist"
        android:layout_height="1.5dp"
        android:layout_width="0dp"
        android:background="@drawable/bg_input_underbar_not"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtExistPw"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />


    <EditText
        android:id="@+id/edtNewPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/vUnderbarExist"
        app:layout_constraintStart_toStartOf="@id/edtExistPw"
        android:background="@android:color/transparent"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:lineSpacingExtra="6sp"
        android:textColorHint="@color/pinkish_grey"
        android:hint="@string/edt_changepw_newpw"
        android:maxLines="1"
        android:ems="10"
        android:inputType="textPassword"
        />

    <View
        android:id="@+id/vUnderbarNewpw"
        android:layout_height="1.5dp"
        android:layout_width="0dp"
        android:background="@drawable/bg_input_underbar_not"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtNewPw"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

    <EditText
        android:id="@+id/edtNewPwConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/vUnderbarNewpw"
        app:layout_constraintStart_toStartOf="@id/edtNewPw"
        android:background="@android:color/transparent"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:lineSpacingExtra="6sp"
        android:textColorHint="@color/pinkish_grey"
        android:hint="@string/edt_changepw_newpw_confirm"
        android:maxLines="1"
        android:ems="10"
        android:inputType="textPassword"
        />

    <View
        android:id="@+id/vUnderbarNewpwconfirm"
        android:layout_height="1.5dp"
        android:layout_width="0dp"
        android:background="@drawable/bg_input_underbar_not"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtNewPwConfirm"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

    <TextView
        android:id="@+id/tvChangepwNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/mainpink"
        android:lineSpacingExtra="5sp"
        android:text="@string/tv_changepw_notice"
        android:fontFamily="@font/notosans-light"
        app:layout_constraintStart_toStartOf="@id/vUnderbarNewpwconfirm"
        app:layout_constraintTop_toBottomOf="@id/edtNewPwConfirm"
        android:layout_marginTop="16dp"
        android:paddingStart="6dp"
        />

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/mainpink"
        card_view:cardCornerRadius="17dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        android:elevation="7dp"
        card_view:layout_constraintTop_toTopOf="@id/edtNewPwConfirm"
        card_view:layout_constraintStart_toStartOf="@id/vUnderbarNewpwconfirm">


    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>