<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.download_card.DownloadCardActivity">


    <Button
        android:id="@+id/btnUnlockBack"
        android:layout_width="13dp"
        android:layout_height="22dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPhoneNumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="207dp"
        android:fontFamily="@font/notosans-black"
        android:lineSpacingExtra="6sp"
        android:text="@string/tv_phonenum_title"
        android:textColor="@color/greyish_brown_two"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPhoneNumpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="85dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/notosans-light"
        android:hint="@string/edt_phone_numpw"
        android:inputType="textPassword"
        android:lineSpacingExtra="6sp"
        android:maxLines="1"
        android:textColor="@color/pinkish_grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneNumTitle" />

    <View
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_input_underbar_not"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPhoneNumpw" />


    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginTop="78dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPhoneNumpw"
        card_view:cardCornerRadius="24dp"
        >

    <Button
        android:id="@+id/btnChangePhoneNum"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_btn_changephonenum_not"
        android:fontFamily="@font/notosans-black"
        android:lineSpacingExtra="6sp"
        android:text="@string/btn_change_phonenum"
        android:textColor="@color/white"
        android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>