<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.helper.SelectSortFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topbarSelectSort"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:background="@drawable/btn_solid_pink"
            android:id="@+id/btnSelectSortConfirm"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            android:text="완료"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/notosans_regular"/>
        <ImageView
            android:id="@+id/btnSelectSortSetting"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/btn_managerhome_setting"
            app:layout_constraintTop_toTopOf="@+id/btnSelectSortConfirm"
            app:layout_constraintBottom_toBottomOf="@+id/btnSelectSortConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:text="편집"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvSelectSortSearch"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:shadowColor="#29000000"
            app:cardElevation="6dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="@id/btnSelectSortConfirm"
            app:layout_constraintTop_toBottomOf="@id/btnSelectSortConfirm">
            <SearchView
                android:id="@+id/svSelectSortSearch"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- region 보이는순-->
    <View
        android:id="@+id/vSelectSortSeeSort"
        android:layout_width="6dp"
        android:layout_height="6dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/dot_selected"
        app:layout_constraintEnd_toEndOf="@+id/ctvSelectSortSeeSort"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/ctvSelectSortSeeSort" />

    <CheckedTextView
        android:id="@+id/ctvSelectSortSeeSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:checked="true"
        android:fontFamily="@font/notosans_bold"
        android:lineSpacingExtra="6sp"
        android:text="@string/tv_select_cort_see_sort"
        android:textColor="@color/mainpink"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/ctvSelectSortCountSort"
        app:layout_constraintTop_toBottomOf="@id/vSelectSortSeeSort" />
    <!-- endregion-->


    <!-- region 빈도순 -->
    <View
        android:id="@+id/vSelectSortCountSort"
        android:layout_width="6dp"
        android:layout_height="6dp"
        android:background="@drawable/dot_selected"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/ctvSelectSortCountSort"
        app:layout_constraintStart_toStartOf="@id/ctvSelectSortCountSort"
        app:layout_constraintTop_toTopOf="@id/vSelectSortSeeSort" />

    <CheckedTextView
        android:id="@+id/ctvSelectSortCountSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:checked="false"
        android:fontFamily="@font/notosans_regular"
        android:lineSpacingExtra="6sp"
        android:text="@string/tv_select_sort_count_sort"
        android:textColor="@color/greyish_two"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/ctvSelectSortNameSort"
        app:layout_constraintStart_toEndOf="@id/ctvSelectSortSeeSort"
        app:layout_constraintTop_toBottomOf="@id/vSelectSortCountSort" />

    <!-- endregion -->

    <!-- region 이름 순 -->
    <View
        android:id="@+id/vSelectSortNameSort"
        android:layout_width="6dp"
        android:layout_height="6dp"
        android:background="@drawable/dot_selected"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/ctvSelectSortNameSort"
        app:layout_constraintStart_toStartOf="@id/ctvSelectSortNameSort"
        app:layout_constraintTop_toTopOf="@id/vSelectSortCountSort"/>

    <CheckedTextView
        android:id="@+id/ctvSelectSortNameSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:lineSpacingExtra="6sp"
        android:text="@string/tv_select_sort_name_sort"
        android:textColor="@color/greyish_two"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/ctvSelectSortCountSort"
        app:layout_constraintTop_toBottomOf="@id/vSelectSortNameSort"
        android:layout_marginTop="3dp"/>

    <!-- endregion -->

    <TextView
        android:id="@+id/tvSelectSortAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_regular"
        android:text="등록된 카드가 없습니다."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ctvSelectSortNameSort" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSelectSort"
        android:layout_width="match_parent"
        android:background="@drawable/img_cardmanagement_empty"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/ctvSelectSortNameSort"
        app:layout_constraintTop_toBottomOf="@id/ctvSelectSortNameSort" />

</androidx.constraintlayout.widget.ConstraintLayout>